--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 /*
  *= require_self
  */
-/*@import 'normalize.css';*/
+@import 'normalize.css';
 @import 'global.css.scss';
 /*@import 'notes.css.scss';*/
-/*@import 'welcome.css.scss';*/
+@import 'welcome.css.scss';
