--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,5 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.erb
+#banner
+.banner_content
+  %h1 NoteBook
+  %p Your online notebook. Never forget an idea again.
+  %button= link_to "Sign Up", new_user_registration_path
