Add testimonials to welcome page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,3 +3,21 @@
     %h1 NoteBook
     %p Your online notebook. Never forget an idea again.
     %button= link_to "Sign Up", new_user_registration_path
+
+#testimonial
+  .wrapper
+    %p.quote "The greatest notebook application. Period."
+    %p.name - Mackenzie Kid
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Notes
+        %p "A woman must have money and a room of her own if she is to write fiction."
+      .callout
+        %h2 Rocket
+        %p  "Why am I so incredibly and incurably romantic about Cornwall? One’s past, I suppose; I see children running in the garden … The sound of the sea at night … almost forty years of life, all built on that, permeated by that: so much I could never explain."
+      .callout
+        %h2 Lightening
+        %p "Michael Cunningham's 1998 Pulitzer Prize-winning novel The Hours focused on three generations of women affected by Woolf's novel Mrs Dalloway."
