Add another call to action and footer

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -21,3 +21,12 @@
       .callout
         %h2 Lightening
         %p "Michael Cunningham's 1998 Pulitzer Prize-winning novel The Hours focused on three generations of women affected by Woolf's novel Mrs Dalloway."
+
+#bottom_cta
+  .wrapper
+    %h2 For realz!
+    %p Put that first note down, this week.
+    %button= link_to "Click me!", new_user_registration_path
+
+%footer
+  %p &copy; Mackenzie Kid
