--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 edit note here
+.wrapper_with_padding
+  %h1 edit note here
 
-= render 'form'
+  = render 'form'
 
-= link_to "Cancel", note_path
+  = link_to "Cancel", note_path
