--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,12 +13,15 @@
   .callout_inner
     .wrapper
       .callout
+        %i.fa.fa-pencil
         %h2 Notes
         %p "A woman must have money and a room of her own if she is to write fiction."
       .callout
+        %i.fa.fa-rocket
         %h2 Rocket
         %p  "Why am I so incredibly and incurably romantic about Cornwall? One’s past, I suppose; I see children running in the garden … The sound of the sea at night … almost forty years of life, all built on that, permeated by that: so much I could never explain."
       .callout
+        %i.fa.fa-bolt
         %h2 Lightening
         %p "Michael Cunningham's 1998 Pulitzer Prize-winning novel The Hours focused on three generations of women affected by Woolf's novel Mrs Dalloway."
 
